--- a/table2go/index.html
+++ b/table2go/index.html
@@ -5,20 +5,15 @@
     <meta charset="utf-8">
     <title>Table to Go</title>
     <meta name="description" content="A brief page description">
-    <link rel="stylesheet" href="style.css">
-	<script src="jquery-latest.min.js" type="text/javascript"></script>
-	<link href="bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
-	<script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
-    <script src="table2go.js"></script>
-	<script src="doT.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+	<script src="resource/js/jquery-latest.min.js" type="text/javascript"></script>
+	<link href="resource/css/bootstrap.css" rel="stylesheet" media="screen">
+	<script src="resource/js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/table2go.js"></script>
 </head>
 
 <body>
-
-	<!-- <script>
-		window.onload = load_input()
-	</script> -->
 
 	<div class="container-fluid">
 		<div class="row-fluid">
@@ -28,99 +23,37 @@
 			<div class="span6">
 				<div class="jumbotron">
 					<h1>Table to Go</h1>
-					<p>change mysql table of desc to go structure</p>
+					<p>Change mysql table of <code>desc</code> to go structure. See more in <a href="https://github.com/gotables">my github.</a></p>
 				  </div>
 			</div>
 		</div>
 		<div class="row-fluid">
 			<div class="span5">
-				<div class="centered">
-					<button class="btn btn-primary" type="button" onclick="example()">
-						example
-					</button>			  
-					</div>
-				<!-- <div class="btn-group">
-					 <button class="btn">Action</button> <button data-toggle="dropdown" class="btn dropdown-toggle"><span class="caret"></span></button>
-					<ul class="dropdown-menu">
-						<li>
-							<a href="#">操作</a>
-						</li>
-						<li>
-							<a href="#">设置栏目</a>
-						</li>
-						<li>
-							<a href="#">更多设置</a>
-						</li>
-						<li class="divider">
-						</li>
-						<li class="dropdown-submenu">
-							 <a tabindex="-1" href="#">更多选项</a>
-							<ul class="dropdown-menu">
-								<li>
-									<a href="#">操作</a>
-								</li>
-								<li>
-									<a href="#">设置栏目</a>
-								</li>
-								<li>
-									<a href="#">更多设置</a>
-								</li>
-							</ul>
-						</li>
-					</ul>
-				</div> -->
+					<a href="javascript:example();">&nbsp;&nbsp;&nbsp;&nbsp;Mysql Example</a>		  
 			</div>
 			<div class="span2">
 				<div class="centered">
-				<button class="btn btn-primary" type="button" onclick="table2go(input_table.value)">
-					Go
-				</button>			  
+					<button class="btn btn-primary" type="button" onclick="table2go(input_table.value)">
+						Go
+					</button>			  
 				</div>
 			</div>
 			<div class="span5">
-				<div class="checkbox">
-					<label>
-					  <input type="checkbox" id="simple" onclick="table2go(input_table.value)" checked ='checked'> simple
-					</label>
+				<div class="centered">
+					<div class="leftfloat">
+						<div class="checkbox">
+							<input type="checkbox" id="simple" onclick="table2go(input_table.value)" checked ='checked'> simple
+						</div>
+					</div>
+					<div class="leftfloat">
+						<div class="checkbox">
+							<input type="checkbox" id="store" onclick="check_store()" checked ='checked'> store </input>
+							<script>
+								load_store_check()
+							</script>
+						</div>
+					</div>
 				</div>
-				<div class="checkbox">
-					<label>
-					  <input type="checkbox" id="store" onclick="check_store()" checked ='checked'> store </input>
-					  <script>
-						  load_store_check()
-					  </script>
-					</label>
-				</div>
-				<!-- <div class="btn-group">
-					 <button class="btn">Action</button> <button data-toggle="dropdown" class="btn dropdown-toggle"><span class="caret"></span></button>
-					<ul class="dropdown-menu">
-						<li>
-							<a href="#">操作</a>
-						</li>
-						<li>
-							<a href="#">设置栏目</a>
-						</li>
-						<li>
-							<a href="#">更多设置</a>
-						</li>
-						<li class="divider">
-						</li>
-						<li class="dropdown-submenu">
-							 <a tabindex="-1" href="#">更多选项</a>
-							<ul class="dropdown-menu">
-								<li>
-									<a href="#">操作</a>
-								</li>
-								<li>
-									<a href="#">设置栏目</a>
-								</li>
-								<li>
-									<a href="#">更多设置</a>
-								</li>
-							</ul>
-						</li>
-					</ul>
-				</div> -->
 			</div>
 		</div>
 		<div class="row-fluid">
@@ -138,7 +71,7 @@
 		</div>
 		<div class="row-fluid">
 			<div class="span12">
-				<address><strong>by JiHan</strong></address>
+				<strong>by JiHan.</strong> &nbsp;&nbsp;Version 1.0.0
 			</div>
 		</div>
 	</div>
