[feature] support more mysql format

--- a/table2go/index.html
+++ b/table2go/index.html
@@ -53,6 +53,11 @@
 							</script>
 						</div>
 					</div>
+					<div class="leftfloat">
+						<div class="checkbox">
+							<a href="javascript:copyGo('output_go');"><strong>Copy</strong></a>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
